# Player_Data

./: .gitignore  LICENSE  Makefile  Makefile.am  README.md  configure.ac
src/: main  main.c
tests/: maintest  maintest.c  takecleaninput.c  test.txt  test1  test1.c  testwritefiles  testwritefiles.c
