# Initialize autoconf
AC_INIT([Player_Data], [1.0], [example@example.com])

# Set up automake
AM_INIT_AUTOMAKE([-Wall -Werror foreign])

# Checks for programs
AC_PROG_CC

# Checks for libraries

# Checks for header files
AC_CHECK_HEADERS([stdlib.h stdio.h string.h])

# Define output files
AC_CONFIG_FILES([Makefile])
AC_OUTPUT
